add check partner and create plan REST
